--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-MONGO_URI = mongodb://doorgan_admin:doorgan_admin-12345@ac-nhc1gpi-shard-00-00.m2mfjkl.mongodb.net:27017,ac-nhc1gpi-shard-00-01.m2mfjkl.mongodb.net:27017,ac-nhc1gpi-shard-00-02.m2mfjkl.mongodb.net:27017/?ssl=true&replicaSet=atlas-rtjykd-shard-0&authSource=admin&retryWrites=true&w=majority
+MONGO_URI = mongodb://doorgan-admin:doorgan-1234@ac-kzmgqxw-shard-00-00.4s6lc5g.mongodb.net:27017,ac-kzmgqxw-shard-00-01.4s6lc5g.mongodb.net:27017,ac-kzmgqxw-shard-00-02.4s6lc5g.mongodb.net:27017/?ssl=true&replicaSet=atlas-eyjbj1-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0
 TOKEN = doorgan_tokenize
 
 # gmail verify
