--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 # midtrans
-PUBLIC_CLIENT = SB-Mid-client-Bk51GMvGj8R3aLzx
-DANGEROUSLY_DISABLE_HOST_CHECK=true
+PUBLIC_CLIENT = Mid-client-X1x8TI1lN8BjiPn_
+# DANGEROUSLY_DISABLE_HOST_CHECK=true
